ingress/whale/whale-svcs.yaml
apiVersion: v1
kind: Service
metadata:
    name: whale-svc-a
    labels:
        app: whale-ingress-a
spec:
    type: NodePort
    selector:
        app: whale-ingress-a
    ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: whale-svc-b
    labels:
        app: whale-ingress-b
spec:
    type: NodePort
    selector:
        app: whale-ingress-b
    ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: whale-svc-default
    labels:
        app: whale-ingress-a
spec:
    type: NodePort
    selector:
        app: whale-ingress-a
    ports:
    - name: http
      port: 80
      protocol: TCP
